Fennica2/Client/style.css
/* ... */
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

    blockquote:before, blockquote:after,
    q:before, q:after {
        content: '';
        content: none;
    }

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Clearfix */
.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

/* Pohjoiseen base CSS */

body {
    min-width: 320px;
    font-family: "Helvetica Neue", Arial, sans-serif;
    font-size: 14px;
    line-height: 1.6;
    background: #fbfbfb;
    color: #333;
    overflow-x: hidden;
}

h1 {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 15px;
    font-size: 72px;
    color: #000;
    line-height: 1.3;
    font-weight: normal;
}

h1 a, h1 a:hover {
    color: #000;
    text-decoration: none;
}

h2 a {
    text-decoration: none;
}

h2 a:hover {
    text-decoration: underline;
}

h2 {
    text-align: center;
    font-size: 30px;
    margin-top: 0;
    margin-bottom: 15px;
    font-weight: normal;
}

h3 {
    text-align: center;
    font-size: 22px;
    margin-top: 0;
    margin-bottom: 15px;
    font-weight: normal;
}

h4 {
    text-align: center;
    font-size: 14px;
    margin-top: 0;
    margin-bottom: 5px;
    font-weight: normal;
}

h5 {
    text-align: center;
    font-size: 12px;
    margin-top: 0;
    margin-bottom: 5px;
    font-weight: normal;
}

sup {
    vertical-align: super;
    font-size: smaller;
}

sub {
    vertical-align: sub;
    font-size: smaller;
}

hr {
    width: 300px;
    margin: 8px auto;
    border: 1px solid #444;
    clear: both;
}

p, ul, blockquote, .block, table {
    /*max-width: 860px;
  margin: 15px auto;
  padding: 0 10px;*/
    margin: 15px auto;
}

th, td {
    border: 1px solid #ccc;
    padding: 3px;
    text-align: center;
}

blockquote {
    font-size: larger;
    max-width: 820px;
    padding: 5px 10px;
    border-left: 4px dotted #ccc;
}

    blockquote ul {
        margin-left: 15px;
    }

ul {
    margin-left: 20px;
}

ul > li {
    list-style: circle;
}

figure {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 10px;
    position: relative;
    left: calc(-40vw + 50%);
    width: 80vw;
}

figure img, #primary img {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
}

figcaption {
    color: #888;
    font-size: smaller;
    font-style: italic;
    width: 75%;
    margin: auto;
}

i, em {
    font-style: italic;
}

b, strong {
    font-weight: bold;
    color: #000;
}

a {
    color: #000;
}

a:hover {
    color: #66c;
}

.muted {
    color: #e0e0e0;
}

header.big .muted {
    color: #666;
}

img.twitter {
    width: 20px;
    height: 20px;
    vertical-align: top;
    margin-right: 5px;
}

/* Big Laptop */
@media (min-width: 1440px) {
}

/* Small laptop */
@media (max-width: 1399px) {
}

/* Just small enough to not break out images */
@media (max-width: 1280px) {
    figure {
        left: auto;
        width: auto;
        margin-left: -20px;
        margin-right: -20px;
    }
}

/* Mobile, Tablet */
@media (max-width: 1023px) {
    h1 {
        font-size: 40px;
    }

    h2 {
        font-size: 24px;
    }

    body {
        line-height: 1.4;
    }
}

/* Mobile */
@media (max-width: 767px) {
    h1 {
        font-size: 32px;
        margin-top: 20px;
        margin-bottom: 10px;
        line-height: 1;
    }

    h2 {
        font-size: 20px;
    }

    h2 .time, h2 .place {
        margin-left: 20px;
        font-size: 16px;
    }

    h2 .time::before, h2 .place::before {
        left: -20px;
    }

    figure {
        left: calc(-50vw + 50%);
        width: 100vw;
        margin-left: 0;
        margin-right: 0;
    }

    hr {
        width: 150px;
    }
}

/* Narrow mobile */
@media (max-width: 399px) {
    .hide-tiny {
        display: none !important;
    }
}

main {
    position: relative;
    background: #fff;
    border-bottom: 1px solid rgba(0, 0, 0, 0); /* against collapsing borders */
    box-shadow: #ccc 0 0 25px;
}

main::before {
    /*background-image: url(./bg-map.jpg);
  background-position: 0 0;
  background-repeat: repeat-y;
  opacity: 0.2;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
  content: "";*/
}

/* Header/footer */

header {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin: auto;
}

header.big {
    height: 200px;
    flex-direction: column;
    position: relative;
}

header.big::before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background: url(./header-bg.jpg) 50% 60% no-repeat;
    background-size: cover;
    opacity: 0.6;
}

.title-link {
    text-decoration: none;
    position: relative;
}

.main-title {
    display: inline-block;
    border: 1px solid #fff;
    outline: 2px solid #64382C;
    background-color: #64382C;
    color: #222;
    padding: 5px;
    border-radius: 7px;
}

.main-title img {
    height: 40px;
    vertical-align: middle;
}

.big .main-title {
    margin: auto;
    padding: 10px;
}

.big .main-title img {
    height: 100px;
}

.title-link .note {
    display: block;
    position: absolute;
    right: -8px;
    text-shadow: #000 0 0 3px, #000 0 0 3px, #000 0 0 3px;
    color: #fff;
    /*font-family: Tie-Regular;*/
    bottom: -1px;
    font-size: 16px;
}

header nav {
    font-size: 15px;
    margin-left: 15px;
    line-height: 1.2;
    color: #606060;
    z-index: 1;
}

header.big nav {
    margin: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    line-height: inherit;
    font-size: 30px;
    text-align: center;
}

header nav a {
    color: #888;
    text-decoration: none;
}

header nav a.active {
    color: #000;
}

header.big nav a:hover {
    color: #ddd;
}
/* ... */

